--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 "url": "game.html?game=Burrito%20Bison",
                 "image": "/img/burrito-bison-image.png",
                 "title": "Burrito Bison",
-                "title": "Play Burrito Bison today!!"
+                "description": "Play Burrito Bison today!!"
     },
         ];
 
