--- a/game.html
+++ b/game.html
@@ -65,10 +65,10 @@
             padding: 20px;
         }
 
-        /* Light Blue and Fancy Iframe Container */
+        /* Adjusted iframe container to be smaller */
         .iframe-container {
-            width: 90%;
-            height: 80vh;
+            width: 80%;  /* Reduced from 90% to 80% */
+            height: 70vh;  /* Reduced from 80vh to 70vh */
             position: relative;
             background: linear-gradient(135deg, rgba(66, 245, 236, 0.3), rgba(255, 255, 255, 0.1));
             border-radius: 20px;
@@ -79,7 +79,6 @@
             overflow: hidden;
         }
 
-        /* Light Blue Neon Glow and Animated Border */
         iframe {
             width: 100%;
             height: 100%;
