--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <!-- Random game section -->
     <div id="random-game" class="random-game" style="display: none;">
-        <a id="random-game-link" href="#" target="_blank">
+        <a id="random-game-link" href="" target="_blank">
             <img id="random-game-image" src="" alt="Random Game">
             <h3 id="random-game-title"></h3>
             <p id="random-game-description"></p>
