--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
         // Array of games
         const games = [
             {
-                url: './Games/game.html?game=Monkey%20Mart',
+                url: 'game.html?game=Monkey%20Mart',
                 image: './img/monkey.jpeg',
                 title: 'Monkey Mart',
                 description: 'Play as a monkey making a store'
             },
             {
-                url: './Games/game.html?game=Bit%20Plane',
+                url: 'game.html?game=Bit%20Plane',
                 image: './img/plane.jpg',
                 title: 'Bit Plane',
                 description: 'Play an awesome plane fighting game'
             },
             {
-                url: './Games/game.html?game=Subway%20Surfers',
+                url: 'game.html?game=Subway%20Surfers',
                 image: './img/subwaysurfers.png',
                 title: 'Subway Surfers',
                 description: 'Play Subway Surfers!'
