--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
     <div class="footer">
     </div>
 
-    <!-- Random game section -->
-    <div id="random-game" class="random-game" style="display: none;">
-        <a id="random-game-link" href="" target="_blank">
-            <img id="random-game-image" src="" alt="Random Game">
-            <h3 id="random-game-title"></h3>
-            <p id="random-game-description"></p>
-        </a>
-    </div>
+<!-- Random game section -->
+<div id="random-game" class="random-game" style="display: none;">
+    <a id="random-game-link" href="">
+        <img id="random-game-image" src="" alt="Random Game">
+        <h3 id="random-game-title"></h3>
+        <p id="random-game-description"></p>
+    </a>
+</div>
 
     <script>
         // Array of games
