--- a/index.html
+++ b/index.html
@@ -222,6 +222,24 @@
                 title: 'Subway Surfers',
                 description: 'Play Subway Surfers!'
             }
+            {
+                url: 'game.html?game=Retro%20Bowl',
+                image: './img/retro.png',
+                title: 'Retro Bowl',
+                description: 'Play Retro Bowl at school!!'
+            },
+            {
+                url: 'game.html?game=Slope',
+                image: './img/slope.webp',
+                title: 'Slope',
+                description: 'Have a fun time playing slope'
+            },
+            {
+                url: 'game.html?game=Toss%20the%20Turtle',
+                image: './img/tosstheturtle.webp',
+                title: 'Toss The Turtle',
+                description: 'Play Subway Surfers!'
+            }
         ];
 
         // Function to randomly select a game
