--- a/Games/slope/index.html
+++ b/Games/slope/index.html
@@ -6,10 +6,30 @@
     <title>Unity WebGL Player | Slope</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-  <script src="https://img.y8.com/prevent-keys.js"></script></head>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        overflow: hidden;
+      }
+      #unity-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      #unity-canvas {
+        width: 100%;
+        height: 100%;
+        background-color: black;
+      }
+    </style>
+    <script src="https://img.y8.com/prevent-keys.js"></script>
+  </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=100% height=100%></canvas>
+      <canvas id="unity-canvas"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -45,17 +65,8 @@
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var mobileWarning = document.querySelector("#unity-mobile-warning");
 
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         container.className = "unity-mobile";
-        // Avoid draining fillrate performance on mobile devices,
-        // and default/override low DPI mode on mobile browsers.
         config.devicePixelRatio = 1;
         mobileWarning.style.display = "block";
         setTimeout(() => {
@@ -66,14 +77,14 @@
         canvas.style.height = "100%";
       }
       loadingBar.style.display = "block";
-	  var myGameInstance = null;
+      var myGameInstance = null;
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
-		  myGameInstance = unityInstance;
+          myGameInstance = unityInstance;
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
@@ -85,10 +96,10 @@
       document.body.appendChild(script);
     </script>
     <script async
-    data-ad-client="ca-pub-6129580795478709"
-    data-ad-channel="6347007127"
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+      data-ad-client="ca-pub-6129580795478709"
+      data-ad-channel="6347007127"
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
     </script>
-     <script type="text/javascript" src="js/gameBreakBeta.js"></script>
+    <script type="text/javascript" src="js/gameBreakBeta.js"></script>
   </body>
 </html>
