--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             font-size: 1.2em; /* Increased font size */
         }
-        .redirectButton {
+        #redirectButton {
             position: fixed;
             bottom: 20px;
             left: 20px;
