--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             text-align: center;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             font-size: 1.2em; 
+            color: white;
         }
 
         .random-game h3 {
