--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </a>
 </div>
 <div> 
-    <button id="redirectButton" class = >Click this to turn your tab inot an About-Blank Tab</button>
+    <button id="redirectButton" class = >Click this to turn your tab into an About-Blank Tab</button>
 </div>   
     
 
