--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
             
             // Create an iframe element
             const iframe = newWindow.document.createElement('iframe');
-            iframe.src = window.location.href; // Use the current URL
-            iframe.style.width = '100%';
-            iframe.style.height = '100%';
+            iframe.src = window.location.href;
+            iframe.style.width = '110%';
+            iframe.style.height = '110%';
             iframe.style.border = 'none';
 
             // Append the iframe to the new window's document
