--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ document.getElementById('redirectButton').addEventListener('click', function() {
     iframe.src = window.location.href;
     
     // Apply styles to the iframe
-    iframe.style.width = '100vw'; // Full viewport width
-    iframe.style.height = '100vh'; // Full viewport height
+    iframe.style.width = '100%'; // Full viewport width
+    iframe.style.height = '100%'; // Full viewport height
     iframe.style.border = 'none'; // No border
     iframe.style.position = 'absolute'; // Position it absolutely
     iframe.style.top = '0'; // Align to the top
