--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="particles.js"></script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -175,6 +176,7 @@
         }
     </style>
 </head>
+<div id="particles-js">
 <body>
     <div class="topbar">
         <h1>Void's Games</h1>
@@ -294,7 +296,6 @@ document.getElementById('redirectButton').addEventListener('click', function() {
 });
 
 </script>
-    
-    
 </body>
+</div>
 </html>
