--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <script src="particles.js"></script>
+    <script src="js/app.js"></script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
