--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="particles.js"></script>
     <script src="js/app.js"></script>
     <style>
         body {
@@ -177,8 +176,10 @@
         }
     </style>
 </head>
-<div id="particles-js">
 <body>
+<div id="particles-js"></div>
+
+<script src="particles.js"></script>
     <div class="topbar">
         <h1>Void's Games</h1>
         <div class="nav-buttons">
@@ -298,5 +299,4 @@ document.getElementById('redirectButton').addEventListener('click', function() {
 
 </script>
 </body>
-</div>
 </html>
