--- a/index.html
+++ b/index.html
@@ -173,13 +173,25 @@
                 width: 200px;
                 height: 200px;
             }
+            #particles-js{
+                width: 100%;
+                height: 100%;
+                background-color: #b61924;
+                background-image: url('');
+                background-size: cover;
+                background-position: 50% 50%;
+                background-repeat: no-repeat;
+            }
         }
     </style>
 </head>
 <body>
+<!-- particles.js container -->
 <div id="particles-js"></div>
 
+<!-- scripts -->
 <script src="particles.js"></script>
+<script src="js/app.js"></script>
     <div class="topbar">
         <h1>Void's Games</h1>
         <div class="nav-buttons">
