--- a/index.html
+++ b/index.html
@@ -195,37 +195,37 @@
         </div>
     </div>
     <!-- particles.js container -->
-        <div id="particles-js"></div>
+    <div id="particles-js">
 
         <!-- scripts -->
-        <script src="particles.js"></script>
-        <script src="js/app.js"></script>
-    <div class="content">
-        <p>Hey, what is this website?</p>
-        <p>This is a simple game website to have fun.</p>
-        <p>It will be updated pretty often.</p>
-        <img src="./img/icons.png" id="icon" alt="Game Icon">
-    </div>
+          <script src="particles.js"></script>
+          <script src="js/app.js"></script>
+      <div class="content">
+          <p>Hey, what is this website?</p>
+          <p>This is a simple game website to have fun.</p>
+          <p>It will be updated pretty often.</p>
+          <img src="./img/icons.png" id="icon" alt="Game Icon">
+      </div>
 
-    <div class="play-button-container">
-        <a href="./Games.html" class="play-button">Play</a>
-    </div>
+      <div class="play-button-container">
+          <a href="./Games.html" class="play-button">Play</a>
+      </div>
 
-    <div class="footer">
-    </div>
+      <div class="footer">
+      </div>
 
-<div id="random-game" class="random-game" style="display: none;">
-    <a id="random-game-link" href="">
-        <img id="random-game-image" src="" alt="Random Game">
-        <h3 id="random-game-title"></h3>
-        <p id="random-game-description"></p>
-    </a>
-</div>
-<div> 
-    <button id="redirectButton" class = >Click this to turn your tab into an About-Blank Tab</button>
-</div>   
+  <div id="random-game" class="random-game" style="display: none;">
+      <a id="random-game-link" href="">
+          <img id="random-game-image" src="" alt="Random Game">
+          <h3 id="random-game-title"></h3>
+          <p id="random-game-description"></p>
+      </a>
+  </div>
+  <div> 
+      <button id="redirectButton" class = >Click this to turn your tab into an About-Blank Tab</button>
+  </div>   
     
-
+</div>
     <script>
         // Array of games
         const games = [
