--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
         </div>
     </div>
     <!-- particles.js container -->
-
+<div id="particles-js">
         <!-- scripts -->
           <script src="particles.js"></script>
           <script src="js/app.js"></script>
-      <div id="particles-js">
+      <div id="content">
           <p>Hey, what is this website?</p>
           <p>This is a simple game website to have fun.</p>
           <p>It will be updated pretty often.</p>
@@ -306,5 +306,6 @@ document.getElementById('redirectButton').addEventListener('click', function() {
 });
 
 </script>
+</div>
 </body>
 </html>
