--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             overflow: hidden; /* Prevent scrollbars */
         }
 
-        #particles-js {
-            position: absolute; /* Position it absolutely */
-            top: 0;
-            left: 0;
+        #particles-js{
             width: 100%;
             height: 100%;
-            z-index: 1; /* Set z-index lower than other elements */
+            background-color: #b61924;
+            background-image: url('');
+            background-size: cover;
+            background-position: 50% 50%;
+            background-repeat: no-repeat;
         }
 
         a {
