--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </style>
 </head>
 <body>
-    <div id="particles-js"></div> <!-- Background for particles.js -->
+    <div id="particles-js"></div> 
     <div class="topbar">
         <h1>Void's Games</h1>
         <div class="nav-buttons">
