--- a/index.html
+++ b/index.html
@@ -7,190 +7,160 @@
     <link rel="stylesheet" href="styles.css">
     <script src="js/app.js"></script>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: #1a1a1a;
-            color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            position: fixed;
-            justify-content: space-between;
-        }
-        a {
-            text-decoration: none;
-            color: inherit;
-        }
+body {
+    font-family: 'Arial', sans-serif;
+    background: #1a1a1a;
+    color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
-        .topbar {
-            background-color: #222;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 2px solid #444;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
+.topbar {
+    background-color: #222;
+    padding: 20px;
+    text-align: center;
+    border-bottom: 2px solid #444;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
 
-        .topbar h1 {
-            margin: 0;
-            font-size: 2.5em;
-            color: #f5f5f5;
-        }
+.topbar h1 {
+    margin: 0;
+    font-size: 2.5em;
+}
 
-        .nav-buttons {
-            margin-top: 10px;
-        }
+.nav-buttons {
+    margin-top: 10px;
+}
 
-        .nav-button, .nav-button2 {
-            text-decoration: none;
-            background-color: #333;
-            border: none;
-            color: #fff;
-            padding: 10px 20px;
-            margin: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            border-radius: 30px;
-            transition: background-color 0.3s, transform 0.2s;
-        }
+.nav-button, .nav-button2 {
+    text-decoration: none;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    border-radius: 30px;
+    transition: background-color 0.3s, transform 0.2s;
+}
 
-        .nav-button:hover {
-            background-color: #555;
-            transform: scale(1.05);
-        }
+.nav-button:hover {
+    background-color: #555;
+    transform: scale(1.05);
+}
 
-        .nav-button2 {
-            background-color: #666;
-        }
+.nav-button2 {
+    background-color: #666;
+}
 
-        .content {
-            flex-grow: 1;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px; /* Reduced padding */
-            text-align: center;
-            background-color: #1a1a1a;
-            margin-bottom: 0; /* Remove bottom margin */
-        }
+.content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+}
 
-        .content p {
-            font-size: 1.5em;
-            margin: 5px 0; /* Reduced margin */
-            position: fixed;
-        }
+.content p {
+    font-size: 1.5em;
+    margin: 5px 0;
+}
 
-        #icon {
-            display: block;
-            margin: 10px auto; /* Reduced margin */
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-            position: fixed;
-        }
+#icon {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    margin: 10px 0; /* Adjusted margin */
+}
 
-        .play-button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 5px 0; /* Reduced margin */
-            position: fixed;
-        }
+.play-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 0;
+}
 
-        .play-button {
-            text-decoration: none;
-            background: linear-gradient(145deg, #28a745, #218838);
-            color: #fff;
-            padding: 10px 20px;
-            font-size: 2em;
-            border-radius: 50px;
-            border: 2px solid #1e7e34;
-            transition: background 0.3s, transform 0.2s;
-            position: fixed;
-        }
+.play-button {
+    text-decoration: none;
+    background: linear-gradient(145deg, #28a745, #218838);
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 2em;
+    border-radius: 50px;
+    border: 2px solid #1e7e34;
+    transition: background 0.3s, transform 0.2s;
+}
 
-        .play-button:hover {
-            background: linear-gradient(145deg, #218838, #28a745);
-            transform: translateY(-5px);
-            position: fixed;
-        }
+.play-button:hover {
+    background: linear-gradient(145deg, #218838, #28a745);
+    transform: translateY(-5px);
+}
 
-        .footer {
-            background-color: #1a1a1a;
-            position: fixed;
-            text-align: center;
-            padding: 10px; /* Reduced padding */
-            color: #aaa;
-            margin: 0; /* Ensure no extra margin */
-        }
+.footer {
+    background-color: #1a1a1a;
+    text-align: center;
+    padding: 10px;
+    color: #aaa;
+}
 
-        /* Style for the random game button */
-        .random-game {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: #333;
-            border-radius: 10px;
-            padding: 15px; /* Increased padding */
-            text-align: center;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-            font-size: 1.2em; /* Increased font size */
-        }
-        #redirectButton {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            background: #333;
-            border-radius: 10px;
-            padding: 15px; /* Increased padding */
-            text-align: center;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-            font-size: 1.2em; 
-            color: white;
-        }
+.random-game {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #333;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    font-size: 1.2em;
+}
 
-        .random-game h3 {
-            margin: 10px 0 5px; /* Adjusted margin for spacing */
-        }
+#redirectButton {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background: #333;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    font-size: 1.2em; 
+    color: white;
+}
 
-        .random-game p {
-            margin: 0; /* Adjusted margin for spacing */
-        }
+.random-game h3,
+.random-game p {
+    margin: 10px 0 5px;
+}
 
-        .random-game img {
-            width: 200px; /* Adjust image size */
-            height: 200px; /* Adjust image size */
-            border-radius: 5px;
-            display: block;
-            margin: 0 auto 5px auto; /* Center the image */
-        }
+.random-game img {
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto 5px;
+}
 
-        @media (max-width: 768px) {
-            .play-button {
-                padding: 15px 30px;
-                font-size: 1.5em;
-            }
+@media (max-width: 768px) {
+    .play-button {
+        padding: 15px 30px;
+        font-size: 1.5em;
+    }
 
-            #icon {
-                width: 200px;
-                height: 200px;
-            }
-            #particles-js{
-                width: 100%;
-                height: 100%;
-                background-color: #b61924;
-                background-image: url('');
-                background-size: cover;
-                background-position: 50% 50%;
-                background-repeat: no-repeat;
-            }
-        }
+    #icon {
+        width: 200px;
+        height: 200px;
+    }
+}
+
     </style>
 </head>
 <body>
