--- a/index.html
+++ b/index.html
@@ -136,10 +136,23 @@ body {
     color: white;
 }
 
-.random-game h3,
-.random-game p {
-    margin: 10px 0 5px;
+.random-game {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #333;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    font-size: 1.2em;
 }
+
+.random-game a {
+    color: white; /* Set the text color to white */
+    text-decoration: none; /* Remove the underline */
+}
+
 
 .random-game img {
     width: 200px;
